kompose/waterfall-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: waterfall
  name: waterfall
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: waterfall
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: waterfall
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DB
                  name: env
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD
                  name: env
            - name: POSTGRES_PORT
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PORT
                  name: env
            - name: WATERFALL_PORT
              valueFrom:
                configMapKeyRef:
                  key: WATERFALL_PORT
                  name: env
          image: ghcr.io/anatolik2509/waterfall:master
          name: waterfall-server
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
